force-app/main/default/objects/Section__c/Section__c.object-meta.xml
<CustomObject>
    <label>Section</label>
    <nameField>
        <label>Questionaire Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>