force-app/main/default/objects/Section__c/fields/Additional_Information_Russian__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Russian__c</fullName>
    <label>Additional Information (Russian)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>