force-app/main/default/objects/Section__c/fields/Additional_Information_Ukrainian__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Ukrainian__c</fullName>
    <label>Additional Information (Ukrainian)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>