force-app/main/default/objects/Section__c/fields/Controlling_Question__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Controlling Question</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Questionnaire__c</field>
            <operation>equals</operation>
            <valueField>Question__c.Questionnaire__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>